# Ev2W

./: README.md
evolution-2.32.3/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  configure.ac.orig  configure.ac.rej  configure.orig  evolution-calendar.pc  evolution-mail.pc  evolution-plugin.pc  evolution-shell.pc  evolution-shell.pc.in  free_full.txt
evolution-2.32.3/maint/: Makefile.am  Makefile.in  libgladeevolution.def
evolution-data-server-2.32.3/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  configure.ac.orig  configure.ac.rej  configure.orig  depcomp
evolution-exchange-2.32.3/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in~  configure  configure.ac  configure.ac.orig  evolution-exchange-zip.in
evolution-exchange-2.32.3/addressbook/: Makefile.am  Makefile.in  apps_exchange_addressbook.schemas.in.in  e-book-backend-db-cache.c  e-book-backend-db-cache.h  e-book-backend-exchange-factory.c  e-book-backend-exchange.c  e-book-backend-exchange.h  e-book-backend-gal.c  e-book-backend-gal.h
evolution-exchange-2.32.3/calendar/: Makefile.am  Makefile.in  e-cal-backend-exchange-calendar.c  e-cal-backend-exchange-calendar.h  e-cal-backend-exchange-factory.c  e-cal-backend-exchange-factory.h  e-cal-backend-exchange-tasks.c  e-cal-backend-exchange-tasks.h  e-cal-backend-exchange.c  e-cal-backend-exchange.h  e2k-cal-query.c  e2k-cal-query.h  e2k-cal-utils.c  e2k-cal-utils.h
evolution-exchange-2.32.3/camel/: Makefile.am  Makefile.in  camel-exchange-folder.c  camel-exchange-folder.h  camel-exchange-journal.c  camel-exchange-journal.h  camel-exchange-provider.c  camel-exchange-search.c  camel-exchange-search.h  camel-exchange-store.c  camel-exchange-store.h  camel-exchange-summary.c  camel-exchange-summary.h  camel-exchange-transport.c  camel-exchange-transport.h  camel-exchange-utils.c  camel-exchange-utils.h  mail-utils.c  mail-utils.h
evolution-exchange-2.32.3/docs/reference/: Makefile.am  Makefile.in  evolution-exchange-docs.sgml  evolution-exchange-sections.txt  evolution-exchange.types
evolution-exchange-2.32.3/docs/reference/features/: autoconfig.xml  booking.xml  delegation.xml  favorites.xml  fba.xml  freebusy.xml  oof.xml  other-users.xml  permissions.xml  threading.xml
evolution-exchange-2.32.3/docs/reference/html/: E2kContext.html  E2kGlobalCatalog.html  E2kSecurityDescriptor.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  evolution-exchange-E2kAutoconfig.html  evolution-exchange-E2kContext-(private).html  evolution-exchange-E2kOperation-(private).html  evolution-exchange-E2kOperation.html  evolution-exchange-E2kProperties.html  evolution-exchange-E2kRestriction-(vaporware).html  evolution-exchange-E2kResult-(private).html  evolution-exchange-E2kSid.html  evolution-exchange-E2kUserDialog.html  evolution-exchange-MAPI.html  evolution-exchange-e2k-action.html  evolution-exchange-e2k-freebusy.html  evolution-exchange-e2k-http-utils.html  evolution-exchange-e2k-kerberos.html  evolution-exchange-e2k-restriction.html  evolution-exchange-e2k-result.html  evolution-exchange-e2k-rule.html  evolution-exchange-e2k-uri.html  evolution-exchange-e2k-utils.html  evolution-exchange-e2k-xml-utils.html  evolution-exchange-test-utils.html  evolution-exchange-xntlm-des.html  evolution-exchange-xntlm-md4.html  evolution-exchange-xntlm.html  evolution-exchange.devhelp  evolution-exchange.devhelp2  index.html  index.sgml  ximian-connector-autoconfig.html  ximian-connector-bug-private.html  ximian-connector-bug-xml.html  (+12 more)
evolution-exchange-2.32.3/docs/reference/tmpl/: e2k-action.sgml  e2k-autoconfig.sgml  e2k-context-private.sgml  e2k-context.sgml  e2k-encoding-utils.sgml  e2k-freebusy.sgml  e2k-global-catalog.sgml  e2k-http-utils.sgml  e2k-kerberos.sgml  e2k-operation-private.sgml  e2k-operation.sgml  e2k-properties.sgml  e2k-restriction-vapor.sgml  e2k-restriction.sgml  e2k-result-private.sgml  e2k-result.sgml  e2k-rule.sgml  e2k-security-descriptor.sgml  e2k-sid.sgml  e2k-uri.sgml  e2k-user-dialog.sgml  e2k-utils.sgml  e2k-xml-utils.sgml  evolution-exchange-unused.sgml  mapi.sgml  test-utils.sgml  xntlm-des.sgml  xntlm-md4.sgml  xntlm.sgml
evolution-exchange-2.32.3/eplugin/: Makefile.am  Makefile.in  exchange-account-setup.c  exchange-calendar.c  exchange-config-listener.c  exchange-contacts.c  exchange-delegates-user.c  exchange-delegates.c  exchange-folder-permission.c  exchange-folder-size-display.c  exchange-folder-subscription.c  exchange-folder.c  exchange-mail-send-options.c  exchange-operations.c  exchange-operations.c.orig  exchange-permissions-dialog.c  exchange-send-options.c  exchange-user-dialog.c  org-gnome-exchange-operations.eplug.xml  org-gnome-exchange-operations.error.xml
evolution-exchange-2.32.3/server/storage/: Makefile.am  Makefile.in  e-folder-exchange.c  e-folder-tree.c  e-storage.c  exchange-account.c  exchange-account.h  exchange-constants.h  exchange-esource.c  exchange-hierarchy-favorites.c  exchange-hierarchy-foreign.c  exchange-hierarchy-somedav.c  exchange-hierarchy-webdav.c  exchange-hierarchy.c
evolution-exchange-2.32.3/tools/: Makefile.am  Makefile.in  exchange-autoconfig-wizard.c  exchange-autoconfig-wizard.h  exchange-share-config-listener.c  exchange-share-config-listener.h  ximian-connector-setup.c  ximian-connector-setup.c.orig  ximian-connector.xml
evolution-rss-0-2-5/: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure.ac  evolution-rss.spec.in  (+1 more)
evolution-rss-0-2-5/pixmaps/: Makefile.am
evolution-rss-0-2-5/src/: Makefile.am  dbus.c  dbus.h  debug.h  evolution-import-rss.c  fetch.c  gecko-utils.cpp  gecko-utils.h  misc.c  network-soup.c  network-soup.h  network.h  notification.c  notification.h  org-gnome-evolution-rss.eplug.xml  org-gnome-evolution-rss.xml  parser.c  rss-cache.c  rss-config-factory.c  rss-config.c  rss-config.h  rss-icon-factory.c  rss-icon-factory.h  rss-image.c  rss-image.h  rss.c  rss.h  strptime.c
(+3044 files in other folders)
