## Process this file with automake to produce Makefile.in

pixmapdir = $(ICON_DIR)

pixmap_DATA =   pix.png		\
		rss.png 	\
		rss-16.png 	\
		rss-22.png 	\
		rss-24.png	\
		rss-icon-read.png \
		rss-icon-unread.png \
		rss-text-html.png \
		rss-text-x-generic.png

EXTRA_DIST = $(pixmap_DATA)


-include $(top_srcdir)/git.mk
